syntax = "proto3";

option csharp_namespace = "Makc.Dummy.Integration.MicroserviceReaderViaNoSQL.Infrastructure.Grpc.DummyItem";

package Reader;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service DummyItem {
    rpc Create (DummyItemCreateGrpcRequest) returns (DummyItemGetGrpcReply);
    rpc Delete (DummyItemDeleteGrpcRequest) returns (google.protobuf.Empty);
    rpc Get (DummyItemGetGrpcRequest) returns (DummyItemGetGrpcReply);
    rpc GetList (DummyItemGetListGrpcRequest) returns (DummyItemGetListGrpcReply);
    rpc GetPage (DummyItemGetPageGrpcRequest) returns (DummyItemGetPageGrpcReply);
    rpc Update (DummyItemUpdateGrpcRequest) returns (DummyItemGetGrpcReply);
}

message ActionRequestSort {
    string field = 1;
    bool is_desc = 2;
}

message ActionRequestPage {
    int32 number = 1;
    int32 size = 2;
}

message DummyItemCreateGrpcRequest {
    int64 id = 1;
    string name = 2;
    string concurrency_token = 3;
}

message DummyItemDeleteGrpcRequest {
    string object_id = 1;
}

message DummyItemGetGrpcRequest {
    string object_id = 1;
}

message DummyItemGetGrpcReply {
    string object_id = 1;
    int64 id = 2;
    string name = 3;
    string concurrency_token = 4;
}

message DummyItemGetListGrpcRequestFilter {
    google.protobuf.StringValue full_text_search_query = 1;
}

message DummyItemGetListGrpcRequest {
    int32 max_count = 1;
    ActionRequestSort sort = 2;
    DummyItemGetListGrpcRequestFilter filter = 3;
}

message DummyItemGetListGrpcReplyItem {
    string object_id = 1;
    int64 id = 2;
    string name = 3;
    string concurrency_token = 4;
}

message DummyItemGetListGrpcReply {
    repeated DummyItemGetListGrpcReplyItem items = 1;
}

message DummyItemGetPageGrpcRequest {
    ActionRequestPage page = 1;
    ActionRequestSort sort = 2;
    DummyItemGetListGrpcRequestFilter filter = 3;
}

message DummyItemGetPageGrpcReply {    
    repeated DummyItemGetListGrpcReplyItem items = 1;
    int64 total_count = 2;
}

message DummyItemUpdateGrpcRequest {    
    int64 id = 1;
    string name = 2;
    string concurrency_token = 3;
    string object_id = 4;
}