global using Google.Protobuf.WellKnownTypes;
global using Grpc.Core;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEvent.Actions.Delete;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEvent.Actions.Get;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEvent.Actions.GetList;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEvent.Actions.GetPage;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEvent.Actions.Save;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEvent.Commands;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEvent.DTOs;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEvent.Queries;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEventPayload.Actions.Delete;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEventPayload.Actions.Get;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEventPayload.Actions.GetList;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEventPayload.Actions.GetPage;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEventPayload.Actions.Save;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEventPayload.Commands;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEventPayload.DTOs;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.AppOutgoingEventPayload.Queries;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.Auth.Actions.Login;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.Auth.Commands;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.Auth.DTOs;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.DummyItem.Actions.Delete;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.DummyItem.Actions.Get;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.DummyItem.Actions.GetList;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.DummyItem.Actions.GetPage;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.DummyItem.Actions.Save;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.DummyItem.Commands;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.DummyItem.DTOs;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Domain.UseCases.DummyItem.Queries;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Infrastructure.Grpc.AppOutgoingEvent;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Infrastructure.Grpc.AppOutgoingEventPayload;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Infrastructure.Grpc.Auth;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Infrastructure.Grpc.DummyItem;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Infrastructure.GrpcServer.AppOutgoingEvent;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Infrastructure.GrpcServer.AppOutgoingEventPayload;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Infrastructure.GrpcServer.Auth;
global using Makc.Dummy.Integration.MicroserviceWriterViaSQL.Infrastructure.GrpcServer.DummyItem;
global using Makc.Dummy.Shared.Core.App.Event.Payloads;
global using Makc.Dummy.Shared.Infrastructure.Grpc;
global using MediatR;
global using Microsoft.AspNetCore.Builder;
global using Microsoft.Extensions.Configuration;
global using Microsoft.Extensions.DependencyInjection;
global using Microsoft.Extensions.Logging;
global using AppOutgoingEventPayloadServiceBase = Makc.Dummy.Integration.MicroserviceWriterViaSQL.Infrastructure.Grpc.AppOutgoingEventPayload.AppOutgoingEventPayload.AppOutgoingEventPayloadBase;
global using AppOutgoingEventServiceBase = Makc.Dummy.Integration.MicroserviceWriterViaSQL.Infrastructure.Grpc.AppOutgoingEvent.AppOutgoingEvent.AppOutgoingEventBase;
global using AuthServiceBase = Makc.Dummy.Integration.MicroserviceWriterViaSQL.Infrastructure.Grpc.Auth.Auth.AuthBase;
global using DummyItemServiceBase = Makc.Dummy.Integration.MicroserviceWriterViaSQL.Infrastructure.Grpc.DummyItem.DummyItem.DummyItemBase;
